--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "bash scripts/prepare.sh; bash scripts/beta.sh"
   },
   "dependencies": {
     "@react-native-firebase/app": "^18.0.0",
